--- a/x-team-starters/x-team-config-springboot-starter/src/main/resources/bootstrap.yml
+++ b/x-team-starters/x-team-config-springboot-starter/src/main/resources/bootstrap.yml
@@ -12,7 +12,7 @@ spring:
   cloud:
     nacos:
       config:
-        server-addr: ${NACOS_CONFIG_ADDR:127.0.0.1:8848}
+        server-addr: ${NACOS_CONFIG_ADDR:host.docker.internal:8848}
         file-extension: 'yml'
         namespace: ${NACOS_CONFIG_NAMESPACE:x-team}
         username: ${NACOS_CONFIG_USERNAME:gaussian}
