--- a/x-team-xxl-job/xxl-job-admin/src/main/resources/bootstrap.yml
+++ b/x-team-xxl-job/xxl-job-admin/src/main/resources/bootstrap.yml
@@ -58,11 +58,11 @@ spring:
   cloud:
     nacos:
       config:
-        server-addr: ${NACOS_CONFIG_ADDR:127.0.0.1:8848}
+        server-addr: ${NACOS_CONFIG_ADDR:host.docker.internal:8848}
         file-extension: 'yml'
         namespace: ${NACOS_CONFIG_NAMESPACE:x-team}
-        username: ${NACOS_CONFIG_USERNAME:gaussian}
-        password: ${NACOS_CONFIG_PASSWORD:gaussian}
+        username: ${NACOS_CONFIG_USERNAME:x-team}
+        password: ${NACOS_CONFIG_PASSWORD:x-team}
 logging:
   file-location: /usr/local/logs/x-team
 
