--- a/x-team-xxl-job/.gitignore
+++ b/x-team-xxl-job/.gitignore
@@ -41,3 +41,5 @@ xxl-job-executors/xxl-job-executor-mvp/xxl-job-executor-mvp.iml
 
 xxl-job-executors/xxl-job-executor-suanni/target
 xxl-job-executors/xxl-job-executor-suanni/xxl-job-executor-suanni.iml
+
+x-team-xxl-job.iml
