--- a/x-team-servers/test-server/test-grpc/deploy/envoy.yaml
+++ b/x-team-servers/test-server/test-grpc/deploy/envoy.yaml
@@ -1,5 +1,7 @@
 node:
+  # 需要修改
   id: test-server-envoy
+  # 需要修改
   cluster: test-server-envoy-cluster
 
 admin:
@@ -20,6 +22,7 @@ dynamic_resources:
       transport_api_version: V3
       grpc_services:
         envoy_grpc:
+          # 需要修改
           cluster_name: test-server-xds
   cds_config:
     resource_api_version: V3
@@ -28,19 +31,23 @@ dynamic_resources:
       transport_api_version: V3
       grpc_services:
         envoy_grpc:
+          # 需要修改
           cluster_name: test-server-xds
 
 static_resources:
   clusters:
+  # 需要修改
   - name: test-server-xds
     connect_timeout: 10s
     type: LOGICAL_DNS
     http2_protocol_options: {}
     lb_policy: ROUND_ROBIN
     load_assignment:
+      # 需要修改
       cluster_name: test-server-xds
       endpoints:
       - lb_endpoints:
         - endpoint:
             address:
-              socket_address: { address: host.docker.internal, port_value: 16001 }
+              # 需要修改
+              socket_address: { address: test-server, port_value: 9090 }
