add:two project in one docker

--- a/x-team-servers/test-server/test-grpc/deploy/Dockerfile-template
+++ b/x-team-servers/test-server/test-grpc/deploy/Dockerfile-template
@@ -1,9 +1,8 @@
 FROM jdk11:0408
 MAINTAINER massadobe
-COPY app.jar app.jar
-# 需要修改
+COPY app.jar /app.jar
 ENTRYPOINT ["java","-jar","-DAPPLICATION_PROFILES=dev", \
-"-DXXL_EXECUTOR_PORT=17001", \
+"-DXXL_EXECUTOR_PORT={{XXL_PORT}}", \
 "-DHTTP_PORT=8080", \
 "-DGRPC_PORT=9090", \
 "/app.jar"]
