--- a/x-team-servers/test-server/test-grpc/deploy/envoy.yaml
+++ b/x-team-servers/test-server/test-grpc/deploy/envoy.yaml
@@ -49,5 +49,5 @@ static_resources:
       - lb_endpoints:
         - endpoint:
             address:
-              # 需要修改
-              socket_address: { address: test-server, port_value: 9090 }
+              # 需要修改 socket_address: { address: test-server, port_value: 9090 }
+              socket_address: { address: 127.0.0.1, port_value: 9090 }
