--- a/x-team-starters/x-team-grpc-springboot-starter/src/main/resources/application-grpc.yml
+++ b/x-team-starters/x-team-grpc-springboot-starter/src/main/resources/application-grpc.yml
@@ -14,3 +14,5 @@ grpc:
       keepAliveWithoutCalls: true
       # 协议种类
       negotiationType: plaintext
+# 部署方式
+deploy-type: ${DEPLOY_TYPE:concentrated}
